docs/tests/parser/edge_cases/invalid/TypedefToFuncPtrMissingParen.b
type Handler = fp void int, int;
